[gd_scene load_steps=10 format="3"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_6l7x2"]
[ext_resource type="PackedScene" path="res://scenes/Player.tscn" id="2_d3qdv"]
[ext_resource type="Texture2D" path="res://assets/sprites/background.svg" id="3_62h7r"]
[ext_resource type="Script" path="res://scripts/obstacle_manager.gd" id="4_bvxuo"]
[ext_resource type="PackedScene" path="res://scenes/GroundObstacle.tscn" id="5_3pgr4"]
[ext_resource type="PackedScene" path="res://scenes/AirObstacle.tscn" id="6_1e8s6"]
[ext_resource type="PackedScene" path="res://scenes/FullObstacle.tscn" id="7_xbfwy"]
[ext_resource type="PackedScene" path="res://scenes/Platform.tscn" id="6_l5s5v"]
[ext_resource type="PackedScene" path="res://scenes/Controls.tscn" id="7_oonck"]

[node name="Game" type="Node"]
script = ExtResource("1_6l7x2")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_62h7r")
expand_mode = 1
stretch_mode = 6

[node name="ObstacleManager" type="Node2D" parent="."]
script = ExtResource("4_bvxuo")
ground_obstacle_scene = ExtResource("5_3pgr4")
air_obstacle_scene = ExtResource("6_1e8s6")
full_obstacle_scene = ExtResource("7_xbfwy")

[node name="Platforms" type="Node2D" parent="."]

[node name="Ground" parent="Platforms" instance=ExtResource("6_l5s5v")]
position = Vector2(270, 920)
scale = Vector2(4.5, 1)

[node name="Player" parent="." instance=ExtResource("2_d3qdv")]
position = Vector2(270, 860)

[node name="Camera2D" type="Camera2D" parent="Player"]
limit_left = 0
limit_right = 540
limit_bottom = 960
position_smoothing_enabled = true
position_smoothing_speed = 3.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.780392)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 32
text = "Score: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 90.0
offset_right = 100.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.780392)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 18
text = "High Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -110.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "Restart"

[node name="GameOverPanel" type="Panel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "Game Over!"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -60.0
offset_right = 80.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Play Again"

[node name="Controls" parent="." instance=ExtResource("7_oonck")]
